--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
     <meta name="description" content="agence de web design situé a Lyon, la chouette agence vous apporte son expertise">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -19,7 +18,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js" defer></script>
 
-    <title>La chouette agence- Entreprise de web desing situé à Lyon</title>
+    <title>La chouette agence- Entreprise de web desing située à Lyon</title>
 
     
 <!-- Analytics -->
@@ -70,7 +69,7 @@
 					La chouette agence.
 				</h1>
 				<div class="text-center">
-					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
 			</div>
 		</div>
@@ -121,13 +120,16 @@
 				</p>
 			</div>
 		</div>
-		<div class="row voffset-lg voffset">
-			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<h4>"La chouette agence est une excellente agence web ! Les web designers ont réussi capturer l'essence de notre entreprise et à l'integrer à notre site. Cela nous a aidéa doubler nos ventes en ligne à Lyon."</h4>
-				<p>Maxime Guilbard, PDG de A vos fourchettes</p>
-
-			</div>
-		</div>
+		<blockquote>
+			<p class="text-center quote">
+				"La Chouette Agence est une excellente agence web ! Les web designers ont réussi à capturer
+				l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en
+				ligne à Lyon."
+			</p>
+			<footer class="text-center">
+				Maxime Guibard, PDG de À vos fourchettes
+			</footer>
+		</blockquote> 
 	</div>
 </section>
 <!-- bloc-2-services END -->
@@ -135,13 +137,13 @@
 <!-- bloc-3-what-i-do -->
 <section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 	<div class="container bloc-lg">
-		<div class="row tight-width-whitespace black-background">
+		<div class="row black-background">
 			<div class="col-sm-12">
 				<h2 class="mg-md text-center tc-white">
 					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 				</h2>
 				<p class="text-center white">
-					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
 				</p>
 			</div>
 		</div>
@@ -157,7 +159,7 @@
 				<h2>Nous travaillons avec beaucoup de clients, voici nos réalisations </h2>
 			</div>
 		</div>
-		<div class="row tight-width-whitespace portfolio-row">
+		<div class="row portfolio-row">
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Refonte d'un site web pour un journal local" class="img-responsive portfolio-thumb" /></a>
 				<h3 class="mg-md text-center">
@@ -166,8 +168,9 @@
 				<p class="text-center">
 					Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 				</p>
+				<p class="text-center">Visiter le site : <a href="https://www.journaldelyon.fr" class="ltc-atomic-tangerine">Journal de Lyon</a></p>
 			</div>
-			<div class="col-sm-6 col-xs-12 text-center">
+			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" /></a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
@@ -175,10 +178,11 @@
 				<p class="text-center">
 					Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 				</p>
+				<p class="text-center">Visiter le site : <a href="https://www.photoplatform.fr" class="ltc-atomic-tangerine">Photo platform</a></p>
 			</div>
 		</div>
-		<div class="row tight-width-whitespace portfolio-row">
-			<div class="col-sm-6 col-xs-12 text-center">
+		<div class="row portfolio-row">
+			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt=" Création d'un site web pour voyageur"/></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
@@ -186,6 +190,7 @@
 				<p class="text-center">
 					Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
 				</p>
+				<p class="text-center">Visiter le site : <a href="https://www.journalvoyageur.fr" class="ltc-atomic-tangerine">Journal du voyageur</a></p>
 			</div>
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour agence de mariage" /></a>
@@ -195,6 +200,7 @@
 				<p class="text-center">
 					Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
 				</p>
+				<p class="text-center">Visiter le site : <a href="https://www.agence-mariage.fr" class="ltc-atomic-tangerine">Agence de mariage</a></p>
 			</div>
 		</div>	
 	</div>
@@ -202,17 +208,18 @@
 <!-- bloc-4-portfolio END -->
 
 <!-- bloc-5-cta -->
-<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
-	<div class="container bloc-lg">
-		<div class="row_footer">
-			<h2 class="mg-md text-center tc-white">
-				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
-			</h2>
-			<div class="col-sm-12 text-center">
-				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
-			</div>
+<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper"
+id="bloc-5-cta">
+<div class="container bloc-lg">
+	<div class="row black-background">
+		<h2 class="mg-md text-center tc-white">
+			Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
+		</h2>
+		<div class="col-sm-12 text-center">
+			<a href="contact.html"	class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 		</div>
 	</div>
+</div>
 </section>
 <!-- bloc-5-cta END -->
 </main>
@@ -221,26 +228,26 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<p class="text-center">
 					La chouette agence - Agence web basée à Lyon.<br>
 				</p>
 				<div class="row row-no-gutters social">
-					<div class="col-sm-3">
+					<div class="col-xs-3">
 						<div class="text-center">
 							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
-					<div class="col-sm-3">
+					<div class="col-xs-3">
 						<div class="text-center">
 							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
-					<div class="col-sm-3">
+					<div class="col-xs-3">
 						<div class="text-center">
 							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
-					<div class="col-sm-3">
+					<div class="col-xs-3">
 						<div class="text-center">
 							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
